--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "react-bootstrap": "^1.0.0-beta.11",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.0"
+    "react-scripts": "3.1.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
